fix: add expiration to api key table
