# docs/v3/openapi.json
@@ -721,11 +721,17 @@
       },
       "model.DisplayAPIKey" : {
         "properties" : {
+          "authentication_scopes" : {
+            "type" : "string"
+          },
           "created_at" : {
             "type" : "integer"
           },
           "deleted_at" : {
             "type" : "integer"
+          },
+          "expires_at" : {
+            "type" : "string"
           },
           "id" : {
             "type" : "string"
@@ -733,13 +739,10 @@
           "key" : {
             "type" : "string"
           },
-          "scopes" : {
-            "type" : "string"
-          },
           "updated_at" : {
             "type" : "integer"
           },
-          "userId" : {
+          "user_id" : {
             "type" : "string"
           }
         },
